<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utt.if26.troyes.Nouveau_User"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/troyeslogo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/etMaill"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etPasswordl"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etRePasswordl"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:singleLine="true" />


        <Button
            android:id="@+id/btnCrearl"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonstyle"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:text="@string/continuer"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
